# GHCiCode

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  cabal.project  ghci.json  hie.yaml  stack.yaml
ghci-code/: ghci-code.cabal
ghci-code/src/: GHCiCode.hs
ghci-code/src/GHCiCode/: Internal.hs
ghci-code/tutor/: Main.hs  Tutor1.hs
